--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 18px;
 }
 
 main {
@@ -11,15 +13,71 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: hsl(229, 23%, 23%);
+    background-image: url('images\bg-pattern-bottom.svg');
+    background-color: hsl(185, 75%, 39%);
 }
 
 .container {
-    background-color: white;
-    width: 60%;
+    background-color: #ffffff;
+    width: 80%;
     align-items: center;
+    border-radius: 15px;
+    overflow: hidden;
+    text-align: center;
 }
 
 #uppersection {
     width: 100%;
+    height: 35%;
+    overflow: hidden;
+}
+
+#profilepic {
+    width: 30%;
+    border-radius: 50%;
+    border: 5px solid #ffffff;
+    margin: -15% auto auto auto;
+}
+
+h1 {
+    color: hsl(229, 23%, 23%);
+}
+
+.container h1 {
+    margin: 10px auto 2px auto;
+}
+
+h1 span {
+    color: hsl(0, 0%, 59%);
+}
+
+.container p {
+    margin: 3px auto 15px auto;
+}
+
+p {
+    color: hsl(0, 0%, 59%);
+    font-size: 12px;
+}
+
+.bottomsection {
+    display: flex;
+    border-top: 1px solid hsl(0, 0%, 80%);
+    text-align: center;
+    padding: 0 10%;
+}
+
+.follower {
+    width: 33%;
+    margin: 10% auto;
+}
+
+.likes {
+    width: 34%;
+    margin: 10% auto;
+}
+
+.photos {
+    width: 33%;
+    margin: 10% auto;
 }
