--- a/style.css
+++ b/style.css
@@ -4,22 +4,24 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Kumbh Sans', sans-serif;
-    font-size: 18px;
 }
 
 main {
+    background-image: url("./images/bg-pattern-top.svg"), url("./images/bg-pattern-bottom.svg");
+    background-position: -90% -500px, 170% 400px;
+    background-repeat: no-repeat;
+    background: hsl(185, 75%, 39%);
     min-height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     background-image: url('images\bg-pattern-bottom.svg');
-    background-color: hsl(185, 75%, 39%);
 }
 
 .container {
     background-color: #ffffff;
-    width: 80%;
+    max-width: 350px;
     align-items: center;
     border-radius: 15px;
     overflow: hidden;
@@ -41,6 +43,7 @@ main {
 
 h1 {
     color: hsl(229, 23%, 23%);
+    font-size: 18px;
 }
 
 .container h1 {
