--- a/style.css
+++ b/style.css
@@ -7,16 +7,15 @@
 }
 
 main {
-    background-image: url("./images/bg-pattern-top.svg"), url("./images/bg-pattern-bottom.svg");
+    background: hsl(185, 75%, 39%);
+    background-image: url("images/bg-pattern-top.svg"), url("images/bg-pattern-bottom.svg");
     background-position: -90% -500px, 170% 400px;
     background-repeat: no-repeat;
-    background: hsl(185, 75%, 39%);
     min-height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('images\bg-pattern-bottom.svg');
 }
 
 .container {
